# soft_management

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install-local.sh  package-deb.sh  package-linux.sh  uninstall-local.sh
src/: models.rs
src/adapters/cache/: apt_cache.rs  cargo_cache.rs  conda_cache.rs  docker_cache.rs  journal_cache.rs  log_cache.rs  mod.rs  npm_cache.rs  pip_cache.rs  snap_cache.rs
src/services/: cleanup.rs  disk.rs  process_manager.rs
src/ui/: cleanup.rs  devenv.rs  disk.rs  panorama.rs  process_manager.rs
