[package]
name = "soft-management"
version = "0.1.2"
edition = "2021"
description = "Linux software and development environment unified management tool"
license = "GPL-3.0-or-later"

[[bin]]
name = "softmgr"
path = "src/main.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.10", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.8", features = ["v1_4"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "time", "sync"] }
async-channel = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
thiserror = "2"
walkdir = "2"
freedesktop-desktop-entry = "0.8"
tokio-util = { version = "0.7", features = ["rt"] }
once_cell = "1"
libc = "0.2"

[dev-dependencies]
proptest = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
